[package]
name = "markdown-preview"
version = "0.2.1"
authors = ["ayosec@gmail.com"]
edition = "2018"

[dependencies]
base64 = "0.11.0"
comrak = "0.7.0"
html5ever = "0.25.1"
kuchiki = "0.8.0"
mime_guess = "2.0.3"
structopt = "0.3.11"
structopt-derive = "0.4.4"
warp = "0.2.2"
tokio = { version = "0.2.13", features = [ "rt-threaded", "sync", "macros" ] }
anyhow = "1.0.26"
inotify = "0.8.2"

[profile.release]
lto = true
