[package]
name = "markdown-preview"
version = "0.2.4"
authors = ["ayosec@gmail.com"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
comrak = "0.9.0"
html5ever = "0.25.1"
kuchiki = "0.8.0"
mime_guess = "2.0.3"
structopt = "0.3.11"
structopt-derive = "0.4.4"
warp = "0.3"
tokio = { version = "1.2.0", features = [ "rt-multi-thread", "sync", "macros", "time" ] }
anyhow = "1.0.26"
syntect = "4.5.0"
tokio-stream = { version = "0.1.3", features = [ "sync" ] }
inotify = "0.9.2"

[profile.release]
lto = true
